Made menu taller, corrected css central alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 160px;
-}
-
-.App-header {
-  background-color: #ffffff;
-  height: 150px;
-  padding: 20px;
-  color: #000000;
-}
-
-.App-intro {
-  font-size: large;
+  text-align: -webkit-center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
