--- a/src/ProfileCreator/PuppyProfile.css
+++ b/src/ProfileCreator/PuppyProfile.css
@@ -18,6 +18,7 @@
 
 .form-content {
     position: relative;
+    width: 70%;
     text-align: center;
     margin: 8em 2em 2em 2em;
     padding: 1em;
